--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ pydantic-settings==2.7.1
 # -----------------------------------------------------------------------------
 sqlalchemy==2.0.36
 asyncpg==0.30.0
+psycopg2-binary==2.9.9
 alembic==1.14.0
 greenlet==3.1.1
 
