fix: add alembic migrations to Railway start command

--- a/railway.toml
+++ b/railway.toml
@@ -11,6 +11,7 @@ healthcheckPath = "/health"
 healthcheckTimeout = 30
 restartPolicyType = "on_failure"
 restartPolicyMaxRetries = 3
+startCommand = "alembic upgrade head && uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000}"
 
 [env]
 APP_ENV = "production"
